--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 
     .container {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+      grid-template-columns: repeat(4, 1fr);
       gap: 2rem;
-      max-width: 600px;
+      max-width: 800px;
       width: 100%;
       padding: 2rem;
       background: rgba(255, 255, 255, 0.85);
@@ -60,6 +60,13 @@
       font-size: 0.9rem;
       text-align: center;
     }
+
+    @media (max-width: 768px) {
+      .container {
+        grid-template-columns: repeat(2, 1fr);
+        max-width: 400px;
+      }
+    }
   </style>
 </head>
 <body>
@@ -75,6 +82,10 @@
     <a href="https://dic.daum.net/index.do?dic=kor" target="_blank" rel="noopener">
       <img src="icons/dic.png" alt="국어 사전" />
       <small>국어 사전</small>
+    </a>
+    <a href="https://risbcj-ams.web.app/student.html" target="_blank" rel="noopener">
+      <img src="icons/check.png" alt="출석 체크" />
+      <small>출석 체크</small>
     </a>
   </div>
 </body>
