--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
       <small>국어 사전</small>
     </a>
     <a href="https://risbcj-ams.web.app/student.html" target="_blank" rel="noopener">
-      <img src="icons/check.png" alt="출석 체크" />
-      <small>출석 체크</small>
+      <img src="icons/check.png" alt="일일 체크" />
+      <small>일일 체크</small>
     </a>
   </div>
 </body>
